--- a/style.css
+++ b/style.css
@@ -333,6 +333,46 @@ textarea {
     padding-right: 5px;
     padding-top: 5px;
 }
+
+.staffWrapper {
+	width: 940px;
+	margin-bottom: 25px;
+	padding: 10px 10px;
+	border: 1px solid #666666;
+}
+
+.staffPicture {
+	padding: 5px;
+	text-align: center;
+	font-size: 105%;
+	font-weight: bold;
+	background: white;
+	border: #888888;
+}
+
+.staffTitle {
+	font-weight: normal;
+}
+
+#staffName {
+	display: block;
+	clear: both;
+}
+
+.staffPicture img {
+	margin-bottom: 5px;
+	border: 1px solid #999999;
+}
+
+.staffDescription {
+	padding-top: 10px;
+	line-height: 1.5em;
+}
+
+.everyOther {
+	background: #D5D6D2;
+}
+
 /*--------------------------------------------------
 For Autoscrolling section (e.g. testimonials on homepage)
 --------------------------------------------------*/
