--- a/style.css
+++ b/style.css
@@ -354,6 +354,11 @@ textarea {
 	font-weight: normal;
 }
 
+.multiple {
+    max-width: 175px;
+    min-height: 227px;
+}
+
 #staffName {
 	display: block;
 	clear: both;
@@ -362,6 +367,7 @@ textarea {
 .staffPicture img {
 	margin-bottom: 5px;
 	border: 1px solid #999999;
+
 }
 
 .staffDescription {
