--- a/style.css
+++ b/style.css
@@ -351,6 +351,10 @@ textarea {
     color: #4F81BD;
 }
 
+#contentArea .techimg {
+    max-height: 280px;
+}
+
 #lasikDiagram {
 	border: 1px solid black;
 	margin-left: 25%;
